tests/rt/neg/ifc/cliargs-noauth01.trp
(* Test getCliArgs without authority - should fail *)
getCliArgs ()
